Update runtime permission dependency

--- a/floatingview/build.gradle
+++ b/floatingview/build.gradle
@@ -4,7 +4,6 @@ group='com.github.hzw1199'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "29.0.0"
 
 
     defaultConfig {
@@ -30,11 +29,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "androidx.fragment:fragment:1.2.5"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation('com.yanzhenjie:permission:2.0.0-rc12') {
-        exclude group: 'com.android.support'
-    }
+    implementation 'com.yanzhenjie:permission:2.0.3'
 }
