Compatible with Android 12

--- a/floatingview/src/main/AndroidManifest.xml
+++ b/floatingview/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <permission-group android:name="${applicationId}.andpermission"/>
 </manifest>
