--- a/permission/src/main/AndroidManifest.xml
+++ b/permission/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="${applicationId}.andpermission.bridge" />
+    <permission-group android:name="${applicationId}.andpermission"/>
 
     <application>
         <service
